Fix jump mode labels in standard mode

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -78,7 +78,7 @@ Posting {
 
     & .textual-jump-label {
       padding: 0;
-      margin-top: 1;
+      offset-y: 0;
     }
 
     & CommandPalette {
@@ -746,6 +746,7 @@ Select {
   text-style: bold;
   padding: 0 1;
   margin-right: 1;
+  offset-y: -1;
   height: 1;
   width: auto;
 }
